--- a/config.ini
+++ b/config.ini
@@ -1,3 +1,4 @@
 [Files]
 Global_CostaLines= ./static/data/GSHHS_DIS.shp
 Global_DEM=./static/dem/topo15.grd
+ERA5_Wind=./static/wind/UV010P202001.nc
