部分专题图配置修改

--- a/config.ini
+++ b/config.ini
@@ -2,3 +2,13 @@
 Global_CostaLines= ./static/data/GSHHS_DIS.shp
 Global_DEM=./static/dem/topo15.grd
 ERA5_Wind=./static/wind/UV010P202001.nc
+
+[NT_Gmsh]
+activate_path=D:\\anaconda3\\Scripts\\activate.bat oceanmesh2d
+gmsh_path=D:\\anaconda3\\envs\\oceanmesh2d\\Scripts\\gmsh
+
+[Linux_Gmsh]
+activate_path=/home/zzc/anaconda3/bin/activate
+gmsh_path=/home/zzc/anaconda3/envs/oceanmesh2d/bin/gmsh
+
+
