解决gmsh无法在子线程中被调用的问题

--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [Files]
 Global_CostaLines= ./static/data/GSHHS_DIS.shp
-Global_DEM=./static/dem/topo15.grd
+Global_DEM=./static/dem/topo15.tif
 ERA5_Wind=./static/wind/UV010P202001.nc
 
 [NT_Gmsh]
