配置临时文件目录为全局修改

--- a/config.ini
+++ b/config.ini
@@ -3,6 +3,7 @@ Global_CostaLines= ./static/data/GSHHS_DIS.shp
 Global_DEM=./static/dem/topo15.tif
 ERA5_Wind=./static/wind/UV010P202001.nc
 
+
 [NT_Gmsh]
 activate_path=D:\\anaconda3\\Scripts\\activate.bat oceanmesh2d
 gmsh_path=D:\\anaconda3\\envs\\oceanmesh2d\\Scripts\\gmsh
@@ -12,3 +13,5 @@ activate_path=/home/zzc/anaconda3/bin/activate
 gmsh_path=/home/zzc/anaconda3/envs/oceanmesh2d/bin/gmsh
 
 
+[Directory]
+TEMP_Dir = G:/OceanSimulate/tempfile
