修改静态资源文件目录为全局配置

--- a/config.ini
+++ b/config.ini
@@ -15,3 +15,4 @@ gmsh_path=/home/zzc/anaconda3/envs/oceanmesh2d/bin/gmsh
 
 [Directory]
 TEMP_Dir = G:/OceanSimulate/tempfile
+STATIC_Dir = G:/OceanSimulate/static
