--- a/config.ini
+++ b/config.ini
@@ -3,16 +3,14 @@ Global_CostaLines= ./static/data/GSHHS_DIS.shp
 Global_DEM=./static/dem/topo15.tif
 ERA5_Wind=./static/wind/UV010P202001.nc
 
-
-[NT_Gmsh]
-activate_path=D:\\anaconda3\\Scripts\\activate.bat oceanmesh2d
-gmsh_path=D:\\anaconda3\\envs\\oceanmesh2d\\Scripts\\gmsh
-
-[Linux_Gmsh]
-activate_path=/home/zzc/anaconda3/bin/activate
-gmsh_path=/home/zzc/anaconda3/envs/oceanmesh2d/bin/gmsh
-
-
 [Directory]
 TEMP_Dir = G:/OceanSimulate/tempfile
 STATIC_Dir = G:/OceanSimulate/static
+[NT]
+activate_path=D:\\anaconda3\\Scripts\\activate.bat oceanmesh2d
+gmsh_path=D:\\anaconda3\\envs\\oceanmesh2d\\Scripts\\gmsh
+
+[Linux]
+PRJ_DB=/home/whh/anaconda3/envs/oceanmesh2d/lib/python3.11/site-packages/fiona/proj_data
+activate_path=/home/zzc/anaconda3/bin/activate
+gmsh_path=/home/zzc/anaconda3/envs/oceanmesh2d/bin/gmsh
