修改更新边界属性

--- a/config.ini
+++ b/config.ini
@@ -4,8 +4,8 @@ Global_DEM=./static/dem/topo15.tif
 ERA5_Wind=./static/wind/UV010P202001.nc
 
 [Directory]
-TEMP_Dir = G:/OceanSimulate/tempfile
-STATIC_Dir = G:/OceanSimulate/static
+TEMP_Dir = ./tempfile
+STATIC_Dir =./static
 [NT]
 activate_path=D:\\anaconda3\\Scripts\\activate.bat oceanmesh2d
 gmsh_path=D:\\anaconda3\\envs\\oceanmesh2d\\Scripts\\gmsh
